--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@types/styled-components": "^5.1.30",
     "axios": "^1.6.0",
     "express": "^4.18.2",
     "react": "^18.2.0",
@@ -16,6 +19,7 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.0",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
